# volpe-application

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  gen_protobuf.sh  go.mod  go.sum  migration.txt  pyproject.toml  run_master.sh  sched.md
benchmark/: CMakeLists.txt  F11_deap_avg.csv  F11_dist_avg.csv  F11_prop_avg.csv  F11_single_avg.csv  F12_deap_avg.csv  F12_dist_avg.csv  F12_prop_avg.csv  F12_single_avg.csv  F7_deap_avg.csv  F7_dist_avg.csv  F7_prop_avg.csv  F7_run1.csv  F7_single_avg.csv  TSP262_run1.csv  TSP262_run1_result.txt  bench_1.csv  bench_2.csv  bench_3.csv  common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  deap_dist.py  deap_scoop.py  p7_ga_c4_alt.csv  p7_ga_c4_smaller.csv  p7_ga_c8_smaller.csv  preprocess.ipynb  tsp_seq.py  volpe_container.grpc.pb.cc  volpe_container.grpc.pb.h  volpe_container.pb.cc  volpe_container.pb.h  volpe_problem.cpp
benchmark/automate/: single.py
benchmark/p11_ga/: c4_2.csv  c8_1.csv
benchmark/p12_ga/: c4.csv  c8.csv
benchmark/results_deap/: F11_run1.csv  F11_run2.csv  F11_run3.csv  F11_run4.csv  F11_run5.csv  F12_run1.csv  F12_run2.csv  F12_run3.csv  F12_run4.csv  F12_run5.csv  F7_run1.csv  F7_run2.csv  F7_run3.csv  F7_run4.csv  F7_run5.csv
benchmark/results_dist/: F11_run1.csv  F11_run2.csv  F11_run3.csv  F11_run4.csv  F11_run5.csv  F11_run6.csv  F11_run7.csv  F12_run1.csv  F12_run2.csv  F12_run3.csv  F12_run4.csv  F12_run5.csv  F7_run1.csv  F7_run2.csv  F7_run3.csv  F7_run4.csv  F7_run5.csv
benchmark/results_proposed/: F11_run1.csv  F11_run10.csv  F11_run2.csv  F11_run3.csv  (+21 more)
(+314 files in other folders)
