[project]
name = "volpe-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.3",
    "grpcio-tools>=1.75.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "opfunu>=1.0.4",
    "pandas>=2.3.3",
    "scoop>=0.7.2.0",
]
